_cache/v0.18.0/gettext/specs.md
---
title: "gettext"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["0.21"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 3, "num_specs_by_stack": {"build_systems": 1, "radiuss": 1, "root": 3, "data-vis-sdk": 1, "tutorial": 2, "e4s": 1}}
spec_details: [{"hash": "wuasyuujhovdcl4ymsayv65phrx35bpf", "compiler": "gcc@=7.5.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["build_systems", "radiuss", "root", "data-vis-sdk", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-7.5.0-gettext-0.21-wuasyuujhovdcl4ymsayv65phrx35bpf.spack"}, {"hash": "7g6rytllpv267r53rkju7hlxjll7cjsv", "compiler": "gcc@=7.5.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-7.5.0-gettext-0.21-7g6rytllpv267r53rkju7hlxjll7cjsv.spack"}, {"hash": "yxcscicgqyjxtwuizsfvtzizgp4rwbtb", "compiler": "gcc@=8.4.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-8.4.0-gettext-0.21-yxcscicgqyjxtwuizsfvtzizgp4rwbtb.spack"}]
---