_cache/v0.18.1/gettext/specs.md
---
title: "gettext"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["0.21"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 7, "num_specs_by_stack": {"e4s": 1, "root": 7, "aws-ahug": 2, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2, "tutorial": 2, "radiuss": 1, "data-vis-sdk": 1, "build_systems": 1}}
spec_details: [{"hash": "7g6rytllpv267r53rkju7hlxjll7cjsv", "compiler": "gcc@=7.5.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-7.5.0-gettext-0.21-7g6rytllpv267r53rkju7hlxjll7cjsv.spack"}, {"hash": "t4jqfd3nyctmmqxryqdw5tpemgp4qvce", "compiler": "gcc@=7.3.1", "versions": ["0.21"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/gettext-0.21/linux-amzn2-x86_64_v4-gcc-7.3.1-gettext-0.21-t4jqfd3nyctmmqxryqdw5tpemgp4qvce.spack"}, {"hash": "yb537c3uuvjaifby3thi37pvvmigwpea", "compiler": "gcc@=7.3.1", "versions": ["0.21"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["aws-ahug-aarch64", "root", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/gettext-0.21/linux-amzn2-graviton2-gcc-7.3.1-gettext-0.21-yb537c3uuvjaifby3thi37pvvmigwpea.spack"}, {"hash": "uzvfbguyljworv4qhd3pt4ueudco2tvz", "compiler": "gcc@=7.3.1", "versions": ["0.21"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["aws-ahug-aarch64", "root", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/gettext-0.21/linux-amzn2-aarch64-gcc-7.3.1-gettext-0.21-uzvfbguyljworv4qhd3pt4ueudco2tvz.spack"}, {"hash": "xun7gmib5ztupdaco72llvfbpdvvnra4", "compiler": "gcc@=7.3.1", "versions": ["0.21"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/gettext-0.21/linux-amzn2-x86_64_v3-gcc-7.3.1-gettext-0.21-xun7gmib5ztupdaco72llvfbpdvvnra4.spack"}, {"hash": "wuasyuujhovdcl4ymsayv65phrx35bpf", "compiler": "gcc@=7.5.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["root", "tutorial", "radiuss", "data-vis-sdk", "build_systems"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-7.5.0-gettext-0.21-wuasyuujhovdcl4ymsayv65phrx35bpf.spack"}, {"hash": "yxcscicgqyjxtwuizsfvtzizgp4rwbtb", "compiler": "gcc@=8.4.0", "versions": ["0.21"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+bzip2", "+curses", "+git", "~libunistring", "+libxml2", "+tar", "+xz"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/gettext-0.21/linux-ubuntu18.04-x86_64-gcc-8.4.0-gettext-0.21-yxcscicgqyjxtwuizsfvtzizgp4rwbtb.spack"}]
---